--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,9 +16,9 @@ figure > img { display: block; }
 figcaption { font-size: 12.25px; }
 
 /** Lists */
-ul, ol { margin-left: 30px; line-height: 1.0}
+ul, ol { margin-left: 30px;}
 
-li > ul, li > ol { margin-bottom: 0; }
+li > ul, li > ol { margin-bottom: 0; line-height:1.0}
 
 /** Headings */
 h1, h2, h3, h4, h5, h6 { font-weight: 300; font-family: "Futura", sans-serif; }
